# otus__multithreading

./: README.md  docker-compose.yml  mem_load.py  pyproject.toml  storage_client.py
